[gd_scene load_steps=5 format=3 uid="uid://bokldgveo8cxs"]

[ext_resource type="Texture2D" uid="uid://bpblaumiiv5y6" path="res://map/ui/mapart.png" id="1_ct2qt"]
[ext_resource type="Script" uid="uid://d365r4rxwr6o" path="res://map/ui/map_2d.gd" id="1_n6woq"]
[ext_resource type="Texture2D" uid="uid://i76jrxl5afrb" path="res://map/ui/carIcon.png" id="3_xsfa2"]
[ext_resource type="Texture2D" uid="uid://bxkuqfff1sv5l" path="res://map/ui/playerIcon.png" id="4_xsfa2"]

[node name="Map2D" type="CanvasLayer"]
script = ExtResource("1_n6woq")

[node name="MapBack" type="Sprite2D" parent="."]
position = Vector2(-1, 650)
scale = Vector2(0.217, 0.217)
texture = ExtResource("1_ct2qt")
offset = Vector2(1502.6472, -1500.8824)

[node name="MapCenter" type="Node2D" parent="."]
position = Vector2(325, 324)
scale = Vector2(0.217, 0.217)

[node name="CarIcon" type="Sprite2D" parent="."]
scale = Vector2(0.07, 0.07)
texture = ExtResource("3_xsfa2")

[node name="PlayerIcon" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_xsfa2")
